	 #1825241).
20071106 z80/{z80.pl,z80_ops.c}: fix smallmem compilation (fixes bug #1726014)
	 (Stuart).
20071109 Makefile.am,configure.in,compat/Makefile.am: directly include compat
         files in fuse_SOURCES removing use of libcompat.a as Mac OS X can't
         do empty ar archives (patch #1827454) (Fred).
20071109 if1.c: fix typos in comments (Stuart).
20071109 menu.c,menu.h,ui/{gtk/{binary.c,fileselector.c,gtkui.c,roms.c},
	 ui.h,win32/win32ui.c},widget/{filesel.c,menu.c}: rename
	 menu_get_{open,save}_filename() to ui_get_{open,save}_filename() and
	 move widget_get_filename() to filesel.c (Stuart).
20071109 ui/{gtk/gtkui.c,win32/win32ui.c},ui.c,widget/menu.c: move
	 ui_{tape,{plus3,beta,plusd}_disk}_write() into ui.c (Stuart).
20071109 disk/{beta.c,plusd.c},machines/specplus3.c,ui/{gtk/confirm.c,ui.h,
	 win32/win32ui.c},ui.c,widget/widget.c: add varargs support to
	 ui_confirm_save() and use more detailed messages when ejecting
	 +3, +D and Beta disks (part of feature request #1828228) (Stuart).
20071109 ui/{gtk/gtkui.c,win32/win32ui.c},ui.c: move #include "tape.h" to
	 where it's needed.
20071109 ui/fb/{fbdisplay.c,fbmouse.c}: fix warnings (Stuart).
20071111 if1.[ch],menu.[ch],menu_data.dat,ui/ui.h,ui.c,utils.c: rewrite
	 Microdrive cartridge insertion/ejection code (fixes bugs #1828225 and
	 1828984) (Stuart).
20071111 disk/disk.[ch]: remove 'filename' member of disk_t (Stuart).
20071112 menu_data.pl,ui/win32/{menu_data.[ch],menu_data.rc}: update menu data
	 for the Win32 UI (Stuart).
20071112 menu_data.pl: remove dead code (Stuart).
20071112 hacking/tc2048_tech_notes.txt,machines/{tc2048.c,tc2068.c}: contention
         tweak for TC2048 and TC2068 based on test programs from Phil and
         Mark Woodmass (Fred).
20071112 machines/pentagon.c: revert spec128 memory port change arising from
         Pentagon 512 and Pentagon 1024 emulation merge (patch #1774492), as it
         breaks the Eyeache 2 demo at least (fixes bug #1829280) (Fred).